# translation-service

./: .gitignore  .markdownlint.json  CLAUDE.md  PLAN.md  README.md  cli.py  pyproject.toml  test_phase3.py  test_phase3_multi.py  test_phase4.py  translation-watcher.service
src/translation_service/: classifier.py  notifier.py  pdf_reader.py  pipeline.py  report.py  script_builder.py  slide_renderer.py  translator.py  tts_engine.py  watcher.py
voices/: README.md
