[project]
name = "translation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.107.1",
    "ollama>=0.6.2",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers==4.44.2",
    "tts>=0.22.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
